apps/redpanda/console-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redpanda-console
  namespace: redpanda
spec:
  type: ClusterIP
  selector:
    app: redpanda-console
  ports:
    - name: http
      port: 8080
      targetPort: http
