apps/redpanda/service-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: redpanda-external
  namespace: redpanda
spec:
  type: NodePort
  selector:
    app: redpanda
  ports:
    - name: kafka-external
      port: 9092
      targetPort: kafka
      nodePort: 31092
