apps/redpanda/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: redpanda-route
  namespace: redpanda
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "redpanda.hoytlabs.app"
spec:
  parentRefs:
    - name: gateway-external
      namespace: gateway
  hostnames:
    - "redpanda.hoytlabs.app"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: redpanda-console
          port: 8080
          weight: 1
